; ModuleID = '/home/carl/AnghaBench/linux/drivers/input/touchscreen/extr_mxs-lradc-ts.c_mxs_lradc_ts_read_raw_channel.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/input/touchscreen/extr_mxs-lradc-ts.c_mxs_lradc_ts_read_raw_channel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mxs_lradc_ts = type { i32, i64 }

@LRADC_CH_ACCUMULATE = common dso_local global i32 0, align 4
@LRADC_CH_VALUE_MASK = common dso_local global i32 0, align 4
@LRADC_CH_VALUE_OFFSET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mxs_lradc_ts*, i32)* @mxs_lradc_ts_read_raw_channel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mxs_lradc_ts_read_raw_channel(%struct.mxs_lradc_ts* %0, i32 %1) #0 {
  %3 = alloca %struct.mxs_lradc_ts*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.mxs_lradc_ts* %0, %struct.mxs_lradc_ts** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load %struct.mxs_lradc_ts*, %struct.mxs_lradc_ts** %3, align 8
  %9 = getelementptr inbounds %struct.mxs_lradc_ts, %struct.mxs_lradc_ts* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call i64 @LRADC_CH(i32 %11)
  %13 = add nsw i64 %10, %12
  %14 = call i32 @readl(i64 %13)
  store i32 %14, i32* %5, align 4
  %15 = load i32, i32* %5, align 4
  %16 = load i32, i32* @LRADC_CH_ACCUMULATE, align 4
  %17 = and i32 %15, %16
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %2
  %20 = load %struct.mxs_lradc_ts*, %struct.mxs_lradc_ts** %3, align 8
  %21 = getelementptr inbounds %struct.mxs_lradc_ts, %struct.mxs_lradc_ts* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  store i32 %22, i32* %6, align 4
  br label %24

23:                                               ; preds = %2
  store i32 1, i32* %6, align 4
  br label %24

24:                                               ; preds = %23, %19
  %25 = load i32, i32* %5, align 4
  %26 = load i32, i32* @LRADC_CH_VALUE_MASK, align 4
  %27 = and i32 %25, %26
  %28 = load i32, i32* @LRADC_CH_VALUE_OFFSET, align 4
  %29 = ashr i32 %27, %28
  store i32 %29, i32* %7, align 4
  %30 = load i32, i32* %7, align 4
  %31 = load i32, i32* %6, align 4
  %32 = udiv i32 %30, %31
  ret i32 %32
}

declare dso_local i32 @readl(i64) #1

declare dso_local i64 @LRADC_CH(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
